add reference to I0coin

--- a/README
+++ b/README
@@ -1,2 +1,2 @@
-This repository contains gitian signatures for Bitcoin.
+This repository contains gitian signatures for Bitcoin and I0coin.
 It should be updated on each release.
